remove misc less files, add google analytics to head, add meta tag keywords

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="cpurtlebaugh | an LA based web developer portfolio site.">
+    <meta name="keyword" content="casper purtlebaugh, los angeles web developer, cassie purtlebaugh, baughleon, boigirl, web developer portfolio"
     <meta name="author" content="">
 
     <title>
-        Casper Purtlebaugh
+        Casper Purtlebaugh - an LA based developer.
     </title>
 
     <!-- Bootstrap Core CSS -->
@@ -19,7 +20,7 @@
     <!-- Custom CSS -->
     <link href="css/main.css" rel="stylesheet">
 
-    <!-- Animate css  -->
+    <!-- Animate CSS  -->
     <link rel="stylesheet" href="css/animate.css">
 
     <!-- Custom Fonts -->
@@ -27,13 +28,16 @@
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
+    <!-- google analytics script -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-69354233-2', 'auto');
+      ga('send', 'pageview');
+    </script>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -71,9 +75,9 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
+            <!-- /end navbar-collapse -->
         </div>
-        <!-- /.container -->
+        <!-- /end container -->
     </nav>
 
     <!-- Intro Header -->
@@ -99,9 +103,9 @@
             <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
                 <h2>About</h2>
                 <p></p>
-                <p>Hi I'm Casper (née Cassie), a full-stack web developer, singer, and writer who is passionate about learning and problem-solving. I'm currently seeking a fulltime developer role in the field of entertainment, media, design or marketing. </p>
+                <p>Hi I'm Casper (née Cassie), a full-stack web developer, singer, and writer who is passionate about learning and problem-solving. I'm currently seeking a fulltime position as a developer in the realm of of media, marketing, or design. </p>
 
-                <p>I obtained my B.A. in Philosophy from UCSB in summer '11 and completed General Assembly's Web Development Course in summer '15. Before GA I worked in IT for a few years; after GA I interned at Rhubarb Studios in DTLA. My Philosophy degree, IT experience, and training as a developer are a testament to my ability to break down complex problems while being an artist allows me to approach solutions creatively.</p>
+                <p>I obtained my B.A. in Philosophy from UCSB in summer '11 and completed General Assembly's Web Development Course in summer '15. Before GA I worked in IT for three years. Currently, I'm interning at Rhubarb Studios in DTLA. My Philosophy degree, IT experience, and training as a developer are a testament to my ability to break down complex problems while being an artist allows me to approach solutions creatively.</p>
 
                 <p>On that creative note, I front a post-hxc band called <a href="https://www.youtube.com/watch?v=AKC9gK43X-U" target="_blank">boigirl</a>, create pop music as <a href="https://soundcloud.com/baughleon" target="_blank">baughleon</a>, and occasionally contribute concert reviews to online music sites such as <a href="http://www.verbicidemagazine.com/?s=cassie+purtlebaugh" target="_blank">verbicide</a>. </p>
             </div>
