small changes to gulpfile - not active yet

--- a/index.html
+++ b/index.html
@@ -172,89 +172,89 @@
             </div>
         </div>
     </section>
-
-
     <!-- end project section -->
 
     <!-- skills section -->
     <section id="skills" class="container content-section text-center">
-        <div class="col-lg-12">
+        <!-- <div class="col-lg-12"> -->
             <h2>Skills</h2>
             <p></p>
             <ul class="list-inline banner-social-buttons">
                 <div class="row skill_row">
-                    <li class="col-xs-2 col-sm-2 col-m-2">
-                        <div id="skill_container">
-                            <div id="skill_card" class="shadow">
-                              <div class="skill_front skill_face">
-                                <img class="devicon" src="img/angularjs-plain.svg"/>
-                              </div>
-                              <div class="skill_back skill_face center">
-                                <p>angular.js</p>
-                              </div>
+                    <div class="col-sm-12">
+                        <li class="col-xs-2 col-sm-2 col-m-2">
+                            <div id="skill_container">
+                                <div id="skill_card" class="shadow">
+                                  <div class="skill_front skill_face">
+                                    <img class="devicon" src="img/angularjs-plain.svg"/>
+                                  </div>
+                                  <div class="skill_back skill_face center">
+                                    <p>angular.js</p>
+                                  </div>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="col-xs-2 col-sm-2 col-m-2">
-                        <div id="skill_container">
-                            <div id="skill_card" class="shadow">
-                              <div class="skill_front skill_face">
-                                <img class="devicon" src="img/bootstrap-plain.svg">
-                              </div>
-                              <div class="skill_back skill_face center">
-                                <p>bootstrap</p>
-                              </div>
+                        </li>
+                        <li class="col-xs-2 col-sm-2 col-m-2">
+                            <div id="skill_container">
+                                <div id="skill_card" class="shadow">
+                                  <div class="skill_front skill_face">
+                                    <img class="devicon" src="img/bootstrap-plain.svg">
+                                  </div>
+                                  <div class="skill_back skill_face center">
+                                    <p>bootstrap</p>
+                                  </div>
+                                </div>
                             </div>
-                        </div>
-                    </li>
-                    <li class="col-xs-2 col-sm-2 col-m-2">
-                        <div id="skill_container">
-                        <div id="skill_card" class="shadow">
-                          <div class="skill_front skill_face">
-                           <img class="devicon" src="img/css3-plain.svg">
-                          </div>
-                          <div class="skill_back skill_face center">
-                            <p>CSS3</p>
-                          </div>
-                        </div>
-                        </div>
-                    </li>
-                    <li class="col-xs-2 col-sm-2 col-m-2">
-                        <div id="skill_container">
-                        <div id="skill_card" class="shadow">
-                          <div class="skill_front skill_face">
-                            <img class="devicon" src="img/html5-plain.svg">
-                          </div>
-                          <div class="skill_back skill_face center">
-                            <p>HTML5</p>
-                          </div>
-                        </div>
-                        </div>
-                    </li>
-                    <li class="col-xs-2 col-sm-2 col-m-2">
-                        <div id="skill_container">
-                        <div id="skill_card" class="shadow">
-                          <div class="skill_front skill_face">
-                            <img class="devicon" src="img/javascript-plain.svg">
-                          </div>
-                          <div class="skill_back skill_face center">
-                            <p>javascript</p>
-                          </div>
-                        </div>
-                        </div>
-                    </li>
-                    <li class="col-xs-2 col-sm-2 col-m-2">
-                        <div id="skill_container">
-                        <div id="skill_card" class="shadow">
-                          <div class="skill_front skill_face">
-                            <img class="devicon" src="img/mongodb-plain.svg">
-                          </div>
-                          <div class="skill_back skill_face center">
-                            <p>mongodb</p>
-                          </div>
-                        </div>
-                        </div>
-                    </li>
+                        </li>
+                        <li class="col-xs-2 col-sm-2 col-m-2">
+                            <div id="skill_container">
+                                <div id="skill_card" class="shadow">
+                                  <div class="skill_front skill_face">
+                                   <img class="devicon" src="img/css3-plain.svg">
+                                  </div>
+                                  <div class="skill_back skill_face center">
+                                    <p>CSS3</p>
+                                  </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-xs-2 col-sm-2 col-m-2">
+                            <div id="skill_container">
+                                <div id="skill_card" class="shadow">
+                                  <div class="skill_front skill_face">
+                                    <img class="devicon" src="img/html5-plain.svg">
+                                  </div>
+                                  <div class="skill_back skill_face center">
+                                    <p>HTML5</p>
+                                  </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-xs-2 col-sm-2 col-m-2">
+                            <div id="skill_container">
+                                <div id="skill_card" class="shadow">
+                                  <div class="skill_front skill_face">
+                                    <img class="devicon" src="img/javascript-plain.svg">
+                                  </div>
+                                  <div class="skill_back skill_face center">
+                                    <p>javascript</p>
+                                  </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="col-xs-2 col-sm-2 col-m-2">
+                            <div id="skill_container">
+                                <div id="skill_card" class="shadow">
+                                  <div class="skill_front skill_face">
+                                    <img class="devicon" src="img/mongodb-plain.svg">
+                                  </div>
+                                  <div class="skill_back skill_face center">
+                                    <p>mongodb</p>
+                                  </div>
+                                </div>
+                            </div>
+                        </li>
+                    </div>
                 </div>
 
                 <div class="row skill_row bottom-row">
@@ -332,7 +332,7 @@
                     </li>
                 </div>
             </ul>
-        </div>
+        <!-- </div> -->
     </section>
     <!-- end skills section -->
 
