--- a/index.html
+++ b/index.html
@@ -181,79 +181,77 @@
             <p></p>
             <ul class="list-inline banner-social-buttons">
                 <div class="row skill_row">
-                    <div class="col-sm-12">
-                        <li class="col-xs-2 col-sm-2 col-m-2">
-                            <div id="skill_container">
-                                <div id="skill_card" class="shadow">
-                                  <div class="skill_front skill_face">
-                                    <img class="devicon" src="img/angularjs-plain.svg"/>
-                                  </div>
-                                  <div class="skill_back skill_face center">
-                                    <p>angular.js</p>
-                                  </div>
-                                </div>
+                    <li class="col-xs-2 col-sm-2 col-m-2">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                              <div class="skill_front skill_face">
+                                <img class="devicon" src="img/angularjs-plain.svg"/>
+                              </div>
+                              <div class="skill_back skill_face center">
+                                <p>angular.js</p>
+                              </div>
                             </div>
-                        </li>
-                        <li class="col-xs-2 col-sm-2 col-m-2">
-                            <div id="skill_container">
-                                <div id="skill_card" class="shadow">
-                                  <div class="skill_front skill_face">
-                                    <img class="devicon" src="img/bootstrap-plain.svg">
-                                  </div>
-                                  <div class="skill_back skill_face center">
-                                    <p>bootstrap</p>
-                                  </div>
-                                </div>
+                    </li>
+                    <li class="col-xs-2 col-sm-2 col-m-2">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                              <div class="skill_front skill_face">
+                                <img class="devicon" src="img/bootstrap-plain.svg">
+                              </div>
+                              <div class="skill_back skill_face center">
+                                <p>bootstrap</p>
+                              </div>
                             </div>
-                        </li>
-                        <li class="col-xs-2 col-sm-2 col-m-2">
-                            <div id="skill_container">
-                                <div id="skill_card" class="shadow">
-                                  <div class="skill_front skill_face">
-                                   <img class="devicon" src="img/css3-plain.svg">
-                                  </div>
-                                  <div class="skill_back skill_face center">
-                                    <p>CSS3</p>
-                                  </div>
-                                </div>
+                        </div>
+                    </li>
+                    <li class="col-xs-2 col-sm-2 col-m-2">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                              <div class="skill_front skill_face">
+                               <img class="devicon" src="img/css3-plain.svg">
+                              </div>
+                              <div class="skill_back skill_face center">
+                                <p>CSS3</p>
+                              </div>
                             </div>
-                        </li>
-                        <li class="col-xs-2 col-sm-2 col-m-2">
-                            <div id="skill_container">
-                                <div id="skill_card" class="shadow">
-                                  <div class="skill_front skill_face">
-                                    <img class="devicon" src="img/html5-plain.svg">
-                                  </div>
-                                  <div class="skill_back skill_face center">
-                                    <p>HTML5</p>
-                                  </div>
-                                </div>
+                        </div>
+                    </li>
+                    <li class="col-xs-2 col-sm-2 col-m-2">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                              <div class="skill_front skill_face">
+                                <img class="devicon" src="img/html5-plain.svg">
+                              </div>
+                              <div class="skill_back skill_face center">
+                                <p>HTML5</p>
+                              </div>
                             </div>
-                        </li>
-                        <li class="col-xs-2 col-sm-2 col-m-2">
-                            <div id="skill_container">
-                                <div id="skill_card" class="shadow">
-                                  <div class="skill_front skill_face">
-                                    <img class="devicon" src="img/javascript-plain.svg">
-                                  </div>
-                                  <div class="skill_back skill_face center">
-                                    <p>javascript</p>
-                                  </div>
-                                </div>
+                        </div>
+                    </li>
+                    <li class="col-xs-2 col-sm-2 col-m-2">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                              <div class="skill_front skill_face">
+                                <img class="devicon" src="img/javascript-plain.svg">
+                              </div>
+                              <div class="skill_back skill_face center">
+                                <p>javascript</p>
+                              </div>
                             </div>
-                        </li>
-                        <li class="col-xs-2 col-sm-2 col-m-2">
-                            <div id="skill_container">
-                                <div id="skill_card" class="shadow">
-                                  <div class="skill_front skill_face">
-                                    <img class="devicon" src="img/mongodb-plain.svg">
-                                  </div>
-                                  <div class="skill_back skill_face center">
-                                    <p>mongodb</p>
-                                  </div>
-                                </div>
+                        </div>
+                    </li>
+                    <li class="col-xs-2 col-sm-2 col-m-2">
+                        <div id="skill_container">
+                            <div id="skill_card" class="shadow">
+                              <div class="skill_front skill_face">
+                                <img class="devicon" src="img/mongodb-plain.svg">
+                              </div>
+                              <div class="skill_back skill_face center">
+                                <p>mongodb</p>
+                              </div>
                             </div>
-                        </li>
+                        </div>
+                    </li>
                     </div>
                 </div>
 
@@ -339,7 +337,7 @@
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-4 col-lg-offset-4">
+            <div class="col-sm-4 col-sm-offset-4">
                 <h2>Contact</h2>
                 <p></p>
                 <ul class="list-inline banner-social-buttons">
