fix open meta tag, alter skills icon size to not impact viewport

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="cpurtlebaugh | an LA based web developer portfolio site.">
-    <meta name="keyword" content="casper purtlebaugh, los angeles web developer, cassie purtlebaugh, baughleon, boigirl, web developer portfolio"
+    <meta name="keyword" content="casper purtlebaugh, los angeles web developer, cassie purtlebaugh, baughleon, boigirl, web developer portfolio">
     <meta name="author" content="">
 
     <title>
@@ -359,10 +359,8 @@
     </section>
     <!-- end contact section -->
 
-
     <!-- Footer -->
     <footer>
-
     </footer>
 
     <!-- jQuery -->
