added personally hosted heroku app of castifi example

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                           <img src="img/castifi.svg">
                           <div class="container">
                             <div class="carousel-caption">
-                                <h2><a href="http://www.castifi.com">CASTIFI</a></h2>
+                                <h2><a href="http://castifi-example-app.herokuapp.com/">CASTIFI</a></h2>
                                 <p class="project-text">On-demand casting for background actors.</p>
                                 <p><i class="fa fa-wrench"></i> MongoDB, Express, Node.js, Angular.js, Grunt, Heroku, Mongolab, & TravisCI.</p>
                             </div>
