fix typo on portfolio site

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
                 <h2>About</h2>
                 <p></p>
-                <p>Hi I'm Casper (née Cassie), a full-stack web developer, singer, and writer who is passionate about learning and problem-solving. I'm currently seeking a fulltime position as a developer in the realm of of media, marketing, or design. </p>
+                <p>Hi I'm Casper (née Cassie), a full-stack web developer, singer, and writer who is passionate about learning and problem-solving. I'm currently seeking a fulltime position as a developer in the realm of media, marketing, or design. </p>
 
                 <p>I obtained my B.A. in Philosophy from UCSB in summer '11 and completed General Assembly's Web Development Course in summer '15. Before GA I worked in IT for three years. Currently, I'm interning at Rhubarb Studios in DTLA. My Philosophy degree, IT experience, and training as a developer are a testament to my ability to break down complex problems while being an artist allows me to approach solutions creatively.</p>
 
