--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li>
+                        <a href="img/Casper_Resume.pdf">Résumé</a>
+                    </li>
                 </ul>
             </div>
             <!-- /end navbar-collapse -->
@@ -103,9 +106,9 @@
             <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
                 <h2>About</h2>
                 <p></p>
-                <p>Hi I'm Casper (née Cassie), a full-stack web developer, singer, and writer who is passionate about learning and problem-solving. I'm currently seeking a fulltime position as a developer in the realm of media, marketing, or design. </p>
+                <p>Hi I'm Casper (née Cassie), a full-stack web developer, singer, and writer who is passionate about learning and problem-solving. I'm currently seeking a fulltime position as a developer in the realm of entertainment, media or marketing. </p>
 
-                <p>I obtained my B.A. in Philosophy from UCSB in summer '11 and completed General Assembly's Web Development Course in summer '15. Before GA I worked in IT for three years. Currently, I'm interning at Rhubarb Studios in DTLA. My Philosophy degree, IT experience, and training as a developer are a testament to my ability to break down complex problems while being an artist allows me to approach solutions creatively.</p>
+                <p>I obtained my B.A. in Philosophy from UCSB in summer '11 and completed General Assembly's Web Development Course in summer '15. Before GA I worked in IT for three years. Currently, I'm working at Rhubarb Studios in DTLA. My Philosophy degree, IT experience, and training as a developer are a testament to my ability to break down complex problems while being an artist allows me to approach solutions creatively.</p>
 
                 <p>On that creative note, I front a post-hxc band called <a href="https://www.youtube.com/watch?v=AKC9gK43X-U" target="_blank">boigirl</a>, create pop music as <a href="https://soundcloud.com/baughleon" target="_blank">baughleon</a>, and occasionally contribute concert reviews to online music sites such as <a href="http://www.verbicidemagazine.com/?s=cassie+purtlebaugh" target="_blank">verbicide</a>. </p>
             </div>
