update email, update resume w/ email, add more items to portolio carousel

--- a/index.html
+++ b/index.html
@@ -135,6 +135,26 @@
                           <img src="img/castifi.svg">
                           <div class="container">
                             <div class="carousel-caption">
+                                <h2><a href="https://www.getgobe.com/">GOBE</a></h2>
+                                <p class="project-text">Crowd Activation | Volunteer Software.</p>
+                                <p><i class="fa fa-wrench"></i> MongoDB, Express, Node.js, Angular.js, Grunt, Heroku, TravisCI, & Stripe.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="item active">
+                          <img src="img/castifi.svg">
+                          <div class="container">
+                            <div class="carousel-caption">
+                                <h2><a href="http://cheer-leader-hazel-24802.bitballoon.com/">PSD Mock</a></h2>
+                                <p class="project-text">A PSD mock challenge for Ignition.</p>
+                                <p><i class="fa fa-wrench"></i> Bootstrap, HTML5, CSS3, & Grunt.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="item active">
+                          <img src="img/castifi.svg">
+                          <div class="container">
+                            <div class="carousel-caption">
                                 <h2><a href="http://castifi-example-app.herokuapp.com/">CASTIFI</a></h2>
                                 <p class="project-text">On-demand casting for background actors.</p>
                                 <p><i class="fa fa-wrench"></i> MongoDB, Express, Node.js, Angular.js, Grunt, Heroku, Mongolab, & TravisCI.</p>
@@ -345,7 +365,7 @@
                 <p></p>
                 <ul class="list-inline banner-social-buttons">
                     <li  class="col-lg-3 col-xs-3 contact">
-                        <a href="mailto:cassie.purtlebaugh@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name"></span></a>
+                        <a href="mailto:casperpurtlebaugh@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name"></span></a>
                     </li>
                     <li class="col-lg-3 col-xs-3 contact">
                         <a href="https://twitter.com/baughleonmusic" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name"></span></a>
