add new examples

--- a/index.html
+++ b/index.html
@@ -132,32 +132,32 @@
                       </ol>
                       <div class="carousel-inner">
                         <div class="item active">
-                          <img src="img/castifi.svg">
+                          <img src="img/gobe.svg">
                           <div class="container">
                             <div class="carousel-caption">
                                 <h2><a href="https://www.getgobe.com/">GOBE</a></h2>
                                 <p class="project-text">Crowd Activation | Volunteer Software.</p>
-                                <p><i class="fa fa-wrench"></i> MongoDB, Express, Node.js, Angular.js, Grunt, Heroku, TravisCI, & Stripe.</p>
+                                <p><i class="fa fa-wrench"></i> Angular.js, Node.js, Express, Mongodb, Stripe API, Grunt, Heroku, MongoLab, & TravisCI.</p>
                             </div>
                           </div>
                         </div>
-                        <div class="item active">
-                          <img src="img/castifi.svg">
+                        <div class="item">
+                          <img src="img/jessicajones1000.svg">
                           <div class="container">
                             <div class="carousel-caption">
                                 <h2><a href="http://cheer-leader-hazel-24802.bitballoon.com/">PSD Mock</a></h2>
-                                <p class="project-text">A PSD mock challenge for Ignition.</p>
+                                <p class="project-text">A PSD mock-up challenge for Ignition.</p>
                                 <p><i class="fa fa-wrench"></i> Bootstrap, HTML5, CSS3, & Grunt.</p>
                             </div>
                           </div>
                         </div>
-                        <div class="item active">
+                        <div class="item">
                           <img src="img/castifi.svg">
                           <div class="container">
                             <div class="carousel-caption">
                                 <h2><a href="http://castifi-example-app.herokuapp.com/">CASTIFI</a></h2>
                                 <p class="project-text">On-demand casting for background actors.</p>
-                                <p><i class="fa fa-wrench"></i> MongoDB, Express, Node.js, Angular.js, Grunt, Heroku, Mongolab, & TravisCI.</p>
+                                <p><i class="fa fa-wrench"></i> Angular.js, Node.js, Express, Mongodb, Grunt, Heroku, MongoLab, TravisCI.</p>
                             </div>
                           </div>
                         </div>
