img upload updates

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                           </div>
                         </div>
                         <div class="item">
-                          <img src="img/jessicajones1000.svg">
+                          <img src="img/jessicajones.svg">
                           <div class="container">
                             <div class="carousel-caption">
                                 <h2><a href="http://cheer-leader-hazel-24802.bitballoon.com/">PSD Mock</a></h2>
@@ -172,7 +172,7 @@
                           </div>
                         </div>
                         <div class="item">
-                          <img src="img/boigirlyo.jpg">
+                          <img src="img/boigirl.svg">
                           <div class="container">
                             <div class="carousel-caption">
                                 <h2><a href="http://www.boigirlofficial.com">BOIGIRL</a></h2>
