--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                           <img src="img/jessicajones.svg">
                           <div class="container">
                             <div class="carousel-caption">
-                                <h2><a href="http://cheer-leader-hazel-24802.bitballoon.com/">PSD Mock</a></h2>
-                                <p class="project-text">A PSD mock-up challenge for Ignition.</p>
+                                <h2><a href="http://cheer-leader-hazel-24802.bitballoon.com/">Jessica Jones</a></h2>
+                                <p class="project-text">A PSD mockup challenge for Ignition Creative.</p>
                                 <p><i class="fa fa-wrench"></i> Bootstrap, HTML5, CSS3, & Grunt.</p>
                             </div>
                           </div>
