small tweak to carousel mobile view to help w/ h2 issue, updated resume

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                           <div class="container">
                             <div class="carousel-caption">
                                 <h2><a href="https://www.getgobe.com/">GOBE</a></h2>
-                                <p class="project-text">Crowd Activation | Volunteer Software.</p>
-                                <p><i class="fa fa-wrench"></i> Angular.js, Node.js, Express, Mongodb, Stripe API, Grunt, Heroku, MongoLab, & TravisCI.</p>
+                                <p class="project-text">A Crowd Activation Tool.</p>
+                                <p><i class="fa fa-wrench"></i> Angular.js, Node.js, Express, Mongodb, Stripe API, SendGrid API, Grunt, Heroku, MongoLab, & TravisCI.</p>
                             </div>
                           </div>
                         </div>
@@ -157,7 +157,7 @@
                             <div class="carousel-caption">
                                 <h2><a href="http://castifi-example-app.herokuapp.com/">CASTIFI</a></h2>
                                 <p class="project-text">On-demand casting for background actors.</p>
-                                <p><i class="fa fa-wrench"></i> Angular.js, Node.js, Express, Mongodb, Grunt, Heroku, MongoLab, TravisCI.</p>
+                                <p><i class="fa fa-wrench"></i> Angular.js, Node.js, Express, Mongodb, Google Places API, Grunt, Heroku, MongoLab & TravisCI.</p>
                             </div>
                           </div>
                         </div>
